--- a/content/notes/UWAA556/ch01-1.md
+++ b/content/notes/UWAA556/ch01-1.md
@@ -95,13 +95,16 @@ This is the standard Sturm-Liouville form. Or, on the internet we'll see the "st
 
 This form is important because of a miraculous theorem:
 
-**Theorem** Give regular boundary conditions on \\( u(x) \\) for \\( x \in [a, b] \\), the Sturm-Liouville equation has
-
-- Distinct eigenvalues \\( \lambda_n, n = 1, 2, \ldots \\)
-- For each eigenvalue \\( \lambda_n \\) there is an eigenfunction \\( X_n \\).
-- The eigenfunctions form a complete set of orthogonal functions: \\( \int _a ^b X_n X_m w(x) \dd x = 0, n \neq m \\) (the weighting function \\( w(x) \\) is the above function in the standard S-L form). Completeness is the statement that one can expand any function on \\( [a, b] \\) using the set of eigenfunctions.
-- With the temporal eigenfunctions \\( T_n(t) \\), the solution to the S-L equation is the sum of all the eigenfunctions
-{{< katex display >}}
+> [!IMPORTANT]
+> {{< katex display >}}
+{{< /katex >}}
+> **Theorem** Given regular boundary conditions on \\( u(x) \\) for \\( x \in [a, b] \\), the Sturm-Liouville equation has
+> 
+> - Distinct eigenvalues \\( \lambda_n, n = 1, 2, \ldots \\)
+> - For each eigenvalue \\( \lambda_n \\) there is an eigenfunction \\( X_n \\).
+> - The eigenfunctions form a complete set of orthogonal functions: \\( \int _a ^b X_n X_m w(x) \dd x = 0, n \neq m \\) (the weighting function \\( w(x) \\) is the above function in the standard S-L form). Completeness is the statement that one can expand any function on \\( [a, b] \\) using the set of eigenfunctions.
+> - With the temporal eigenfunctions \\( T_n(t) \\), the solution to the S-L equation is the sum of all the eigenfunctions
+> {{< katex display >}}
 u(x, t) = \sum_{n=1} ^{\infty} a_n X_n(x) T_n (t)
 {{< /katex >}}
 
