--- a/content/notes/UWAA556/ch02-1.md
+++ b/content/notes/UWAA556/ch02-1.md
@@ -33,7 +33,7 @@ In a polarized solid, we define a polarization density
 {{< katex display >}}
 \vec P \equiv \dv{\vec p}{V} \sim \dv{q}{V} \vec \Delta
 {{< /katex >}}
-which is like a charge density \\( \dv{q}{V} \\) times some average separation distance. The source of the dipole electric field are **bound** electric charges. The are not free to move/conduct, and remain in place in the presence of an externally applied field.
+which is like a charge density \\( \dv{q}{V} \\) times some average separation distance. The source of the dipole electric field are **bound** electric charges. They are not free to move/conduct, and remain in place in the presence of an externally applied field.
 
 For the same reason the electric field satisfies Gauss's law
 {{< katex display >}}
