Fix a bunch of formatting issues

--- a/content/notes/UWAA556/ch02-1.md
+++ b/content/notes/UWAA556/ch02-1.md
@@ -130,33 +130,33 @@ Carrying this convolution integral around is going to make things pretty cumbers
 > 
 > **Fourier Convolution Theorem:**
 > 
-> Let \\( f(x) \\), \\( g(x) \\) be functions with Fourier transforms \\( \hat f(k) \\), \\( \hat g (k) \\). Then
+> Let \\( f(x) \\), \\( g(x) \\) be functions with Fourier transforms \\( \hat{f}(k) \\), \\( \hat{g} (k) \\). Then
 > 
-> - The product \\( h(x) = f(x) g(x) \\) has the Fourier transform \\( \hat h (k) = \int _{- \infty} ^\infty \hat f(k - k') \hat g(k') \dd k' \\)
+> - The product \\( h(x) = f(x) g(x) \\) has the Fourier transform \\( \hat{h} (k) = \int _{- \infty} ^\infty \hat{f}(k - k') \hat{g}(k') \dd k' \\)
 > 
-> - The product of the spectral transforms \\( \hat m(k) = \hat f(k) \hat g(k) \\) has inverse Fourier transform \\( m(x) = \int _{-\infty} ^\infty f(x - x') g(x') \dd x' \\)
+> - The product of the spectral transforms \\( \hat{m}(k) = \hat{f}(k) \hat{g}(k) \\) has inverse Fourier transform \\( m(x) = \int _{-\infty} ^\infty f(x - x') g(x') \dd x' \\)
 > 
 > We can summarize by saying that products and convolution are Fourier transform pairs.
 
 
-So, in the spectral variables \\( \hat \vec P(\omega) \\) and \\( \hat \vec E (\omega) \\), the convolution is much simpler:
+So, in the spectral variables \\( \hat{\vec P} (\omega) \\) and \\( \hat{\vec E} (\omega) \\), the convolution is much simpler:
 
 {{< katex display >}}
 \vec P (t) = \epsilon_0 \int _{-\infty} ^\infty \chi (t - t') \vec E(t') \dd t'
 {{< /katex >}}
 {{< katex display >}}
-\rightarrow \hat \vec P (\omega) = \epsilon_0 \hat \chi (\omega) \hat \vec E(\omega)
+\rightarrow \hat{\vec P} (\omega) = \epsilon_0 \hat{\chi} (\omega) \hat{ \vec E}(\omega)
 {{< /katex >}}
 
 Similarly, the dielectric function is
 
 {{< katex display >}}
-\hat \epsilon(\omega) = \epsilon_0 (1 + \hat \chi (\omega))
+\hat{\epsilon}(\omega) = \epsilon_0 (1 + \hat{\chi} (\omega))
 {{< /katex >}}
 
 So we can construct the polarization field as a function of frequency if we know the susceptibility.
 
-If the spectral susceptibility \\( \hat \chi(\omega) \\) is completely real, that means \\( \hat p = \hat \chi \hat E \\), meaning \\( \vec P \\) and \\( \vec E \\) have the same phase. But, if the susceptibility is complex, we'll also get a phase shift. \\( \hat P \\) is amplitude modulated and phase shifted.
+If the spectral susceptibility \\( \hat{\chi}(\omega) \\) is completely real, that means \\( \hat{p} = \hat{\chi} \hat{E} \\), meaning \\( \vec P \\) and \\( \vec E \\) have the same phase. But, if the susceptibility is complex, we'll also get a phase shift. \\( \hat{P} \\) is amplitude modulated and phase shifted.
 
 Time-varying polarization is a function of moving charges, which means that time-varying polarization is associated with an electric current
 {{< katex display >}}
@@ -351,10 +351,10 @@ The electric current that results from conduction due to a rapidly changing elec
 {{< /katex >}}
 In the frequency domain, we just have
 {{< katex display >}}
-\hat \vec j (\omega) = \hat \sigma (\omega) \hat \vec E(\omega)
+\hat{\vec j} (\omega) = \hat{\sigma} (\omega) \hat{\vec E}(\omega)
 {{< /katex >}}
 
-Moving to the frequency domain gives us the temporal response to the changing field, but how do we include the spatial dependence? \\( \hat \vec P(\omega) \\), \\( \hat \vec j (\omega) \\) are missing dependence on the wavenumber \\( \vec k \\), but if the material is dispersive we will have relations between the wavenumber and frequency, so we need to include the wavenumber.
+Moving to the frequency domain gives us the temporal response to the changing field, but how do we include the spatial dependence? \\( \hat{ \vec P}(\omega) \\), \\( \hat{\vec j} (\omega) \\) are missing dependence on the wavenumber \\( \vec k \\), but if the material is dispersive we will have relations between the wavenumber and frequency, so we need to include the wavenumber.
 
 - First, we have a **cause** of a spatio-temporal change, in our case a changing electromagnetic field (force)
 - We have a **medium** of response, described by the susceptibility of the material
@@ -368,16 +368,16 @@ In general the susceptibility of the system is going to be dependent on both a t
 
 This sounds pretty nasty, but we can apply the convolution theorem several times to get:
 {{< katex display >}}
-\hat \vec P(\vec k, \omega) = \hat \chi(\vec k, \omega) \vec E(\vec k, \omega)
+\hat{\vec P}(\vec k, \omega) = \hat{\chi}(\vec k, \omega) \vec E(\vec k, \omega)
 {{< /katex >}}
 
-So, if the susceptibility is a function of both space and time \\( \hat \chi(\vec k, \omega) \\), then we know that there is nonlocality in the response. This is the case in plasmas, because the particles are moving around.
+So, if the susceptibility is a function of both space and time \\( \hat{\chi}(\vec k, \omega) \\), then we know that there is nonlocality in the response. This is the case in plasmas, because the particles are moving around.
 
 {{< katex display >}}
-\hat \vec j (\vec k, \omega) = \hat \sigma(\vec k, \omega) \hat \vec E(\vec k, \omega)
+\hat{\vec j} (\vec k, \omega) = \hat{\sigma}(\vec k, \omega) \hat{\vec E}(\vec k, \omega)
 {{< /katex >}}
 {{< katex display >}}
-\hat \vec D(\vec k, \omega) = \hat \epsilon(\vec k, \omega)\vec E(\vec k, \omega)
+\hat{\vec D}(\vec k, \omega) = \hat{\epsilon}(\vec k, \omega)\vec E(\vec k, \omega)
 {{< /katex >}}
 
 ### Alternative Form of Dielectric Constant
@@ -394,7 +394,7 @@ How can we construct such a field D? It's always going to be easier in the spect
 \vec D(x, t) = \int \int \epsilon_b (\vec x - \vec x', t - t') \vec E(\vec x', t') \dd \vec x' \dd t'
 {{< /katex >}}
 {{< katex display >}}
-\rightarrow \hat \vec D = \hat \epsilon_b \hat \vec E
+\rightarrow \hat{\vec D} = \hat{\epsilon_b} \hat{\vec E}
 {{< /katex >}}
 We start by taking the divergence of the curl of \\( \vec H \\)
 {{< katex display >}}
@@ -405,41 +405,41 @@ We start by taking the divergence of the curl of \\( \vec H \\)
 {{< /katex >}}
 Fourier transforming,
 {{< katex display >}}
-i \vec k \cdot \hat \vec j _f - i \omega (i \vec k \cdot \hat \vec D) = 0
+i \vec k \cdot \hat{\vec j} _f - i \omega (i \vec k \cdot \hat{\vec D}) = 0
 {{< /katex >}}
 
-Assuming a conductivity given by \\( \hat \vec j_f = \hat \sigma \hat \vec E \\) and substituting in
+Assuming a conductivity given by \\( \hat{\vec j}_f = \hat{\sigma} \hat{ \vec E} \\) and substituting in
 {{< katex display >}}
-i \vec k \cdot ( \hat \sigma \hat \vec E - i \omega \hat \epsilon_b \hat \vec E) = 0
+i \vec k \cdot ( \hat{\sigma} \hat{\vec E} - i \omega \hat{\epsilon}_b \hat{\vec E}) = 0
 {{< /katex >}}
 {{< katex display >}}
-i \vec k \cdot (\hat \sigma - i \omega \hat \epsilon_b ) \hat \vec E = 0
+i \vec k \cdot (\hat{\sigma} - i \omega \hat{\epsilon}_b ) \hat{\vec E} = 0
 {{< /katex >}}
 {{< katex display >}}
-- i \omega(i \vec k \cdot(\hat \epsilon_b - \frac{\hat \sigma}{i \omega}) \hat \vec E) = 0
+- i \omega(i \vec k \cdot(\hat{\epsilon}_b - \frac{\hat{\sigma}}{i \omega}) \hat{\vec E}) = 0
 {{< /katex >}}
 
-If we define our new \\( \hat \vec D ^\prime \\) as
+If we define our new \\( \hat{\vec D} ^\prime \\) as
 {{< katex display >}}
-\hat \vec D^\prime = \left( \hat \epsilon_b - \frac{\hat \sigma}{i \omega} \right) \hat \vec E
+\hat{\vec D}^\prime = \left( \hat{\epsilon}_b - \frac{\hat{\sigma}}{i \omega} \right) \hat{\vec E}
 {{< /katex >}}
 then
 {{< katex display >}}
-- i \omega(i \vec k \cdot \hat \vec D') = 0 \rightarrow \div \vec D' = 0
+- i \omega(i \vec k \cdot \hat{\vec D}') = 0 \rightarrow \div \vec D' = 0
 {{< /katex >}}
 
 So, when we move from a field \\( \vec D \\) which is not divergence-free to \\( \vec D' \\), we get a different dielectric constant
 {{< katex display >}}
-\vec D = \hat \epsilon_b \hat \vec E \quad \rightarrow \quad \hat \vec D' = \hat \epsilon \hat \vec E
+\vec D = \hat{\epsilon}_b \hat{\vec E} \quad \rightarrow \quad \hat{\vec D}' = \hat{\epsilon} \hat{\vec E}
 {{< /katex >}}
 {{< katex display >}}
-\hat \epsilon = \hat \epsilon_b + i \frac{\hat \sigma}{\omega}
+\hat{\epsilon} = \hat{\epsilon}_b + i \frac{\hat{\sigma}}{\omega}
 {{< /katex >}}
 This is sometimes called the **effective dielectric constant**.
 
 Looking back at what we've actually done when transforming to this new \\( \vec D^\prime \\) view,
 - \\( \div \vec D = 0 \\) is the basic assumption. This is essentially the same as transforming into a system in which there are no free charges.
-- If the polarization is happening such that the imaginary part of \\( \hat \epsilon_b \\) is zero, that implies that \\( \text{Im}(\hat \epsilon) = \hat \sigma / \omega \\)
+- If the polarization is happening such that the imaginary part of \\( \hat{\epsilon}_b \\) is zero, that implies that \\( \text{Im}(\hat{\epsilon}) = \hat{\sigma} / \omega \\)
 
 ### Polarization of Simple Oscillator
 
@@ -449,7 +449,7 @@ We're going to encounter the dielectric function \\( \epsilon(\omega, \vec k) \\
 
 Imagine we have a slab of bound negative charges of density \\( n_e \\) within a neutral background. When the slab responds to an external electric field \\( \vec E_x \\) and moves by \\( \vec x \\), it leaves behind (or reveals) positive charge. This displacement creates an electric field, same as a capacitor
 {{< katex display >}}
-\vec E_r = \frac{Q}{\epsilon_0 A} \hat x
+\vec E_r = \frac{Q}{\epsilon_0 A} \hat{x}
 {{< /katex >}}
 {{< katex display >}}
 \vec E_r = - \frac{qn}{\epsilon_0} \vec x
@@ -475,36 +475,36 @@ If we also assume that there is some dissipation in the system, we'll have a dam
 {{< /katex >}}
 This is the general first-order equation for driven simple harmonic motion with damping \\( \gamma \\). Now, we move to the frequency domain
 {{< katex display >}}
-(- i \omega)^2 \hat \vec x + (- i \omega \gamma) \hat \vec x + \omega_p ^2 \hat \vec x = \frac{q}{m} \hat \vec E_x
+(- i \omega)^2 \hat{\vec x} + (- i \omega \gamma) \hat{\vec x} + \omega_p ^2 \hat{\vec x} = \frac{q}{m} \hat{\vec E}_x
 {{< /katex >}}
 Solving for the displacement,
 {{< katex display >}}
-\rightarrow \hat \vec x(\omega_p ^2 - \omega^2 - i \omega \gamma) = \frac{q}{m} \hat \vec E_x
+\rightarrow \hat{\vec x}(\omega_p ^2 - \omega^2 - i \omega \gamma) = \frac{q}{m} \hat{\vec E}_x
 {{< /katex >}}
 {{< katex display >}}
-\hat \vec x = \frac{q}{m} \frac{1}{\omega_p ^2 - \omega^2 - i \omega \gamma} \hat \vec E_x
+\hat{\vec x} = \frac{q}{m} \frac{1}{\omega_p ^2 - \omega^2 - i \omega \gamma} \hat{\vec E}_x
 {{< /katex >}}
 Let's try and relate this to the polarization in our system resulting from \\( \vec E_x \\). The polarization of our slab is given by the density of dipole moments
 {{< katex display >}}
 \vec p = q \vec x \qquad \vec P = n q \vec x
 {{< /katex >}}
 {{< katex display >}}
-\hat \vec P = n q \hat \vec x
+\hat{\vec P} = n q \hat{\vec x}
 {{< /katex >}}
 The constitutive relation for the electric susceptibility is defined by
 {{< katex display >}}
-\hat \vec P = \epsilon_0 \hat \chi \hat \vec E
+\hat{\vec P} = \epsilon_0 \hat{\chi} \hat{\vec E}
 {{< /katex >}}
 so we can pick out the susceptibility from our forcing function
 {{< katex display >}}
-\hat \vec P = \frac{n q^2}{\epsilon_0 m} \frac{1}{\omega_p ^2 - \omega ^2 - i \omega \gamma} \hat \vec E
+\hat{\vec P} = \frac{n q^2}{\epsilon_0 m} \frac{1}{\omega_p ^2 - \omega ^2 - i \omega \gamma} \hat{\vec E}
 {{< /katex >}}
 {{< katex display >}}
-\hat \chi = \frac{\omega_p ^2}{\omega_p ^2 - \omega ^2 - i \omega \gamma}
+\hat{\chi} = \frac{\omega_p ^2}{\omega_p ^2 - \omega ^2 - i \omega \gamma}
 {{< /katex >}}
 This is the susceptibility of the model in which we have a slab of polarizing bound charge with damping \\( \gamma \\). The permittivity we get is just
 {{< katex display >}}
-\hat \epsilon = (1 + \hat \chi) \epsilon_0 \qquad \frac{\hat \epsilon}{\epsilon_0} = 1 + \hat \chi
+\hat{\epsilon} = (1 + \hat{\chi}) \epsilon_0 \qquad \frac{\hat{\epsilon}}{\epsilon_0} = 1 + \hat{\chi}
 {{< /katex >}}
 We can consider a few potential situations.
 - What if \\( \gamma = 0\\)
@@ -517,7 +517,7 @@ This is the kind of motion we'll see with magnetic cyclotron motion.
 \frac{\epsilon}{\epsilon_0} = 1 - \frac{\omega_p ^2}{\omega^2}
 {{< /katex >}}
 {{< katex display >}}
-\hat \chi = - \frac{\omega_p ^2}{\omega^2} \quad \rightarrow \quad \hat \vec P = - \frac{\omega_p ^2}{\omega ^2} \epsilon _0 \hat \vec E
+\hat{\chi} = - \frac{\omega_p ^2}{\omega^2} \quad \rightarrow \quad \hat{\vec P} = - \frac{\omega_p ^2}{\omega ^2} \epsilon _0 \hat{\vec E}
 {{< /katex >}}
 {{< katex display >}}
 \rightarrow \pdv{^2 \vec P}{t^2} = \omega_p ^2 \epsilon_0 \vec E_x
@@ -553,14 +553,14 @@ As a trial susceptibility, for independent systems the susceptibilities just sum
 {{< /katex >}}
 Comparing to the effective dielectric constant, we can identify the bound and free portions of the dielectric constant
 {{< katex display >}}
-\hat \epsilon = \hat \epsilon_b + i \frac{\hat \sigma}{\omega \epsilon_0}
+\hat{\epsilon} = \hat{\epsilon}_b + i \frac{\hat{\sigma}}{\omega \epsilon_0}
 {{< /katex >}}
 {{< katex display >}}
-\hat \epsilon_b = 1 + \frac{\omega_p ^2}{\omega_p ^2 - \omega^2}
+\hat{\epsilon}_b = 1 + \frac{\omega_p ^2}{\omega_p ^2 - \omega^2}
 {{< /katex >}}
 The first part is the bound permittivity, and the second part is something like \\( i / \omega \\) times a conductivity:
 {{< katex display >}}
-\hat \sigma = \frac{\omega_p ^2 \epsilon_0}{\gamma - i \omega}
+\hat{\sigma} = \frac{\omega_p ^2 \epsilon_0}{\gamma - i \omega}
 {{< /katex >}}
 This is actually the frequency-dependent Spitzer conductivity, which we will derive another way later on but we can already get to it just from the slab model.
 {{< katex display >}}
